Updated index & indexStyle with Responsive Design for web & mobile

--- a/index.html
+++ b/index.html
@@ -9,28 +9,33 @@
 	<body>
 		<ul id="headerBar">
 			<li class='menu'><a class='menuItem' href="index.html">Home</a></li>
-			<li class='menu'><a class='menuItem' href="first-page.html">First Page</a></li>
-			<li class='menu'><a class='menuItem' href="links-and-images/images.html">Images</a></li>
+			<li class='menu'><a class='menuItem' href="first-page.html">Hello, CSS!</a></li>
+			<li class='menu'><a class='menuItem' href="links-and-images/images.html">Contact</a></li>
 		  </ul>
 
 		<h1>About Me</h1>
 		<p>Hey guys! I'm Carter- a Junior in the BYU CS Program. I love learning about technology in school, and about photography in my spare time.</p>
-		<h2>Projects</h2>
-			<p class='portfolio'>A few of the projects I've worked on include:</p>
-			<ul class='portfolio'>
-				<li>A fully-funcional Datalog interpreter driving an SQL Database</li>
-				<li>A server/client pair that allowed for visualization of Family History</li>
-				<li>A route-finding algorithm using a Gemetic heuristic that rivaled a traditional Branch-and-Bound heuristic</li>
-			</ul>
-		<hr/>
-		<div id='workExperience'>
-		<h2>Work Experience</h2>
-			<ol>
-				<li>doTERRA International, Customer Service Agent(2016, 2018)</li>
-				<li>BYU Communications, Cinematographer/Editor</li>
-				<li>Madsen Image Works, Lead Cinematographer/Creative Director</li>
-			</ol>
+		  
+		<div class='page'>
+			<div class='portfolio'>
+			<h2>Projects</h2>
+				<p>A few of the projects I've worked on include:</p>
+				<ul>
+					<li>A fully-funcional Datalog interpreter driving an SQL Database</li>
+					<li>A server/client pair that allowed for visualization of Family History</li>
+					<li>A route-finding algorithm using a Gemetic heuristic that rivaled a traditional Branch-and-Bound heuristic</li>
+				</ul>
+			</div>
+			<div id='workExperience'>
+			<h2>Work Experience</h2>
+				<ol>
+					<li>doTERRA International, Customer Service Agent(2016, 2018)</li>
+					<li>BYU Communications, Cinematographer/Editor</li>
+					<li>Madsen Image Works, Lead Cinematographer/Creative Director</li>
+				</ol>
+			</div>
 		</div>
+		
 		<hr/>
 		<h2>Emphasis</h2>
 			<p>Contact me on my cell at (999) 999-9999 and at my email <a href="mailto:me@me.com">here</a>.</p>
